src/objects/MX_WB_MotivosNoContacto__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Esta configuración almacena los Motivos de no contacti por los que un Prospecto puede no ser enviado nuevamente a CTI</description>
    <fields>
        <fullName>MX_SB_VTS_HoraDuracion__c</fullName>
        <description>Duración en Horas de la acción</description>
        <inlineHelpText>Horas de duración</inlineHelpText>
        <label>Duración</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_IDACCION__c</fullName>
        <description>Numero de accion a detonar.</description>
        <inlineHelpText>Acción a detonar (1,2,3)</inlineHelpText>
        <label>Numero de accion</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Nivel_10__c</fullName>
        <description>Décimo nivel de tipificación de árbol de decisión.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Décimo nivel de tipificación de árbol de decisión.</inlineHelpText>
        <label>Nivel 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Nivel_1__c</fullName>
        <description>Nivel 1 del arbol de tipificación</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Nivel 1 de revision</inlineHelpText>
        <label>Nivel 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Nivel_2__c</fullName>
        <description>Crea el segundo nivel de iteración en el árbol de tipificación.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Segundo nivel de iteración</inlineHelpText>
        <label>Nivel 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_MotivoNoContacto__c</fullName>
        <label>Motivo no contacto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Motivos de no contacto</label>
</CustomObject>